zokrates_cli/examples/compile_errors/generics/generic_inference.zok
struct A<N> {
    field[N] a;
}

def main() {
    A<_> a = A { a: [1] };
    return;
}
